added first test

--- a/vending-machine/index.html
+++ b/vending-machine/index.html
@@ -17,6 +17,7 @@
     <div id="qunit-fixture"></div>
     <script src="https://code.jquery.com/qunit/qunit-1.18.0.js"></script>
     <!-- / testing framework -->
+    <script src="features.js"></script>
     <script src="tests.js">
     </script>
   </body>
