added initial files and folder structure

--- a/learn-qunit/index.html
+++ b/learn-qunit/index.html
@@ -2,9 +2,26 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Learn Qunit</title>
+    <title>Learn QUnit</title>
+    <link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-1.18.0.css">
   </head>
   <body>
+    <div id="qunit"></div>
+    <div id="qunit-fixture"></div>
+    <script src="https://code.jquery.com/qunit/qunit-1.18.0.js"></script>
+    <script src="features.js"></script>
+    <script src="test/tests.js"></script>
+
+    <dic id="">
+      This projects aim to create a Timer/Stopwatch.
+      it should:
+      <ul>
+        <li>Counter should be at Zero when we start</li>
+        <li>Start Counting time from a specific point</li>
+        <li>Continue Counting (without resetting) pick up where we left off.</li>
+        <li>Re-set the counter to Zero.</li>
+      </ul>
+    </div>
 
   </body>
 </html>
