learn QUnit: added a new test, still working on it

--- a/learn-qunit/index.html
+++ b/learn-qunit/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="qunit"></div>
     <div id="qunit-fixture"></div>
-    <dic id="">
+    <div>
       This projects aim to create a Timer/Stopwatch.
       it should:
       <ul>
@@ -18,8 +18,9 @@
         <li>Continue Counting (without resetting) pick up where we left off.</li>
         <li>Re-set the counter to Zero.</li>
       </ul>
+      <br>
+      <div id="timer"></div>      
     </div>
-    <script>console.log(T.timeStarted);</script>    
     <!-- tests -->
     <script src="https://code.jquery.com/qunit/qunit-1.18.0.js"></script>
     <script src="test/tests.js"></script>
