learn QUnit: working on the interface, added button to start the timer

--- a/learn-qunit/index.html
+++ b/learn-qunit/index.html
@@ -19,7 +19,9 @@
         <li>Re-set the counter to Zero.</li>
       </ul>
       <br>
-      <div id="timer"></div>      
+      Timer: <div id="timer"></div>
+      <br>
+      <button onClick="T.startTimer();">start</button>
     </div>
     <!-- tests -->
     <script src="https://code.jquery.com/qunit/qunit-1.18.0.js"></script>
