learn QUnit: stopTimer now also clears the setInterval

--- a/learn-qunit/index.html
+++ b/learn-qunit/index.html
@@ -22,6 +22,7 @@
       Timer: <div id="timer"></div>
       <br>
       <button onClick="T.startTimer();">start</button>
+      <button onClick="T.stopTimer();">Stop</button>
     </div>
     <!-- tests -->
     <script src="https://code.jquery.com/qunit/qunit-1.18.0.js"></script>
