learn QUnit: altered implementation of updateUI method

--- a/learn-qunit/index.html
+++ b/learn-qunit/index.html
@@ -21,7 +21,7 @@
       <br>
       Timer: <div id="timer"></div>
       <br>
-      <button onClick="T.startTimer();">start</button>
+      <button onClick="T.startTimer(new Date().getTime());">start</button>
       <button onClick="T.stopTimer();">Stop</button>
     </div>
     <!-- tests -->
