learn QUnit: added 'reset' button

--- a/learn-qunit/index.html
+++ b/learn-qunit/index.html
@@ -23,6 +23,7 @@
       <br>
       <button onClick="T.startTimer(new Date().getTime());">start</button>
       <button onClick="T.stopTimer();">Stop</button>
+      <button onClick="T.resetTimer();">reset</button>
     </div>
     <!-- tests -->
     <script src="https://code.jquery.com/qunit/qunit-1.18.0.js"></script>
